--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -406,10 +406,10 @@ button:active {
         border: 0.1em solid #73d601;
     }
 
-    footer:nth-child(8) {
+    body > footer{
         display: block;
         width: 100%;
-        height: 15em;
+        height: 20em;
         background-image: url('../images/footer.png');
         background-size: cover;
     }
@@ -489,7 +489,7 @@ button:active {
         border: 0.1em solid #73d601;
     }
 
-    footer:nth-child(8) {
+    body > footer {
         display: block;
         width: 100%;
         height: 30em;
